simple-ingress-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops.bootcamp.com
      http:
        paths:
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  name: http
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: http
